fix: Global drawers positioning on mobile

--- a/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
+++ b/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
@@ -44,6 +44,14 @@
     @include desktop-only {
       border-inline-start: 1px solid awsui.$color-border-layout;
     }
+
+    @include mobile-only {
+      display: none;
+
+      &.last-opened {
+        display: block;
+      }
+    }
   }
 
   &.drawer-hidden {
